--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mayalust/ps-angular-loader/issues"
   },
-  "homepage": "https://github.com/mayalust/ps-angular-loader#readme"
+  "homepage": "https://github.com/mayalust/ps-angular-loader#readme",
+  "dependencies": {
+    "webpack": "^4.26.1"
+  }
 }
