--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ps-angular-loader",
-  "version": "1.0.65",
+  "version": "1.0.66",
   "description": "",
   "main": "./lib/index.js",
   "scripts": {
@@ -32,7 +32,7 @@
     "webpack": "^4.28.1"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "hash-sum": "^1.0.2",
     "proudsmart-template": "^1.0.30",
     "ps-ultility": "^1.0.39"
   }
